--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
 		  <div class="collapse navbar-collapse ms-5" id="navbarSupportedContent">
 			<ul class="navbar-nav ms-auto-center mb-2 mb-lg-0">
 			  <li class="nav-item">
-				<a class="nav-link me-5" aria-current="page" href="#">Home</a>
+				<a class="nav-link me-5" aria-current="page" href="#sec-2">Home</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link me-5" href="#">About</a>
-			  </li>
-
-			  <li class="nav-item">
-				<a class="nav-link me-5" href="#">Pages</a>
+				<a class="nav-link me-5" href="#sec-3">About</a>
 			  </li>
 
 			  <li class="nav-item">
-				<a class="nav-link me-5" href="#">Blogs</a>
+				<a class="nav-link me-5" href="#sec-5">Pages</a>
 			  </li>
 
 			  <li class="nav-item">
-				<a class="nav-link me-5" href="#">Shop</a>
+				<a class="nav-link me-5" href="#sec-6">Blogs</a>
 			  </li>
 
 			  <li class="nav-item">
-				<a class="nav-link me-5" href="#">Courses</a>
+				<a class="nav-link me-5" href="#sec-7">Shop</a>
+			  </li>
+
+			  <li class="nav-item">
+				<a class="nav-link me-5" href="#sec-6">Courses</a>
 			  </li>
 			  <li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle me-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
