--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/owl.carousel.min.css">
 <link rel="stylesheet" href="css/owl.theme.default.css">
+<link rel="icon" type="image" href="https://bootstrapmade.com/assets/img/favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,12 +21,12 @@
 				<img src='image/top-image.jpeg' class="w-100">
 
 			 </div>
-		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+		  <button id="navvv"class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		  </button>
 		  <div class="collapse navbar-collapse ms-5" id="navbarSupportedContent">
 			<ul class="navbar-nav ms-auto-center mb-2 mb-lg-0">
-			  <li class="nav-item">
+			  <li class="nav-item" onClick="sathesh()">
 				<a class="nav-link me-5" aria-current="page" href="#sec-2">Home</a>
 			  </li>
 			  <li class="nav-item">
@@ -758,6 +759,15 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script src="js/owl.cariusel.min.js"></script>
+
+<script>
+	function sathesh(){
+		var navv=document.getElementById("navvv")
+
+		navv.classList.add("collapsed")
+		// navv.aria-expanded="false"
+	}
+</script>
 
 </body>
 </html>
